--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,10 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/gradient_background"
     tools:context=".DetailActivity">
 
-  </androidx.constraintlayout.widget.ConstraintLayout>
+  <ImageView
+      android:id="@+id/ivAlbumSpot"
+      android:layout_width="200dp"
+      android:layout_height="250dp"
+      android:layout_marginTop="28dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintHorizontal_bias="0.498"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent"
+      app:srcCompat="@mipmap/ic_launcher" />
+
+  <Button
+      android:id="@+id/btnPlay"
+      android:layout_width="70dp"
+      android:layout_height="70dp"
+      android:layout_marginTop="8dp"
+      android:background="@drawable/circlebutton"
+      app:icon="@android:drawable/ic_media_play"
+      app:iconGravity="textEnd"
+      app:iconSize="50dp"
+      app:iconTint="#000000"
+      app:layout_constraintEnd_toEndOf="@+id/ivAlbumSpot"
+      app:layout_constraintStart_toStartOf="@+id/ivAlbumSpot"
+      app:layout_constraintTop_toBottomOf="@+id/ivAlbumSpot" />
+
+  <TextView
+      android:id="@+id/textView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginStart="40dp"
+      android:layout_marginTop="32dp"
+      android:text="Title"
+      android:textColor="#D1D1D1"
+      android:textSize="21sp"
+      android:textStyle="bold"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/btnPlay" />
+
+  <TextView
+      android:id="@+id/textView2"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="16dp"
+      android:text="Artist"
+      android:textColor="#D1D1D1"
+      android:textSize="21sp"
+      android:textStyle="bold"
+      app:layout_constraintStart_toStartOf="@+id/tvTitle"
+      app:layout_constraintTop_toBottomOf="@+id/tvTitle" />
+
+  <TextView
+      android:id="@+id/textView3"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="16dp"
+      android:text="Album"
+      android:textColor="#D1D1D1"
+      android:textSize="21sp"
+      android:textStyle="bold"
+      app:layout_constraintStart_toStartOf="@+id/tvArtist"
+      app:layout_constraintTop_toBottomOf="@+id/tvArtist" />
+
+  <TextView
+      android:id="@+id/tvGenre"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="6dp"
+      android:text="TextView"
+      android:textColor="#D1D1D1"
+      android:textSize="18sp"
+      app:layout_constraintStart_toStartOf="@+id/textView5"
+      app:layout_constraintTop_toBottomOf="@+id/textView5" />
+
+  <TextView
+      android:id="@+id/textView5"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="16dp"
+      android:text="Genre"
+      android:textColor="#D1D1D1"
+      android:textSize="21sp"
+      android:textStyle="bold"
+      app:layout_constraintStart_toStartOf="@+id/tvYearProduced"
+      app:layout_constraintTop_toBottomOf="@+id/tvYearProduced" />
+
+  <TextView
+      android:id="@+id/tvYearProduced"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="6dp"
+      android:text="TextView"
+      android:textColor="#D1D1D1"
+      android:textSize="18sp"
+      app:layout_constraintStart_toStartOf="@+id/textView4"
+      app:layout_constraintTop_toBottomOf="@+id/textView4" />
+
+  <TextView
+      android:id="@+id/tvAlbum"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="6dp"
+      android:text="TextView"
+      android:textColor="#D1D1D1"
+      android:textSize="18sp"
+      app:layout_constraintStart_toStartOf="@+id/textView3"
+      app:layout_constraintTop_toBottomOf="@+id/textView3" />
+
+  <TextView
+      android:id="@+id/textView4"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="16dp"
+      android:text="Year Produced"
+      android:textColor="#D1D1D1"
+      android:textSize="21sp"
+      android:textStyle="bold"
+      app:layout_constraintStart_toStartOf="@+id/tvAlbum"
+      app:layout_constraintTop_toBottomOf="@+id/tvAlbum" />
+
+  <TextView
+      android:id="@+id/tvTitle"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="6dp"
+      android:text="TextView"
+      android:textColor="#D1D1D1"
+      android:textSize="18sp"
+      app:layout_constraintStart_toStartOf="@+id/textView"
+      app:layout_constraintTop_toBottomOf="@+id/textView" />
+
+  <TextView
+      android:id="@+id/tvArtist"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_marginTop="6dp"
+      android:text="TextView"
+      android:textColor="#D1D1D1"
+      android:textSize="18sp"
+      app:layout_constraintStart_toStartOf="@+id/textView2"
+      app:layout_constraintTop_toBottomOf="@+id/textView2" />
+
+  <Button
+      android:id="@+id/btnSearch"
+      android:layout_width="50dp"
+      android:layout_height="50dp"
+      android:layout_marginTop="24dp"
+      android:layout_marginEnd="28dp"
+      android:backgroundTint="#00FFFFFF"
+      app:icon="@android:drawable/ic_menu_search"
+      app:iconGravity="textEnd"
+      app:iconSize="40dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintTop_toBottomOf="@+id/btnPlay" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
