--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -36,6 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:text="TextView"
+        android:textColor="#9E9E9E"
         app:layout_constraintStart_toStartOf="@+id/tvRecyclerSong"
         app:layout_constraintTop_toBottomOf="@+id/tvRecyclerSong" />
 
@@ -45,6 +46,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:text="TextView"
+        android:textColor="#9E9E9E"
         app:layout_constraintStart_toEndOf="@+id/tvRecyclerArtist"
         app:layout_constraintTop_toTopOf="@+id/tvRecyclerArtist" />
 
