--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -155,6 +155,8 @@
       android:layout_marginTop="24dp"
       android:layout_marginEnd="28dp"
       android:backgroundTint="#00FFFFFF"
+      android:outlineProvider="none"
+      android:textColorHint="#00FFFFFF"
       app:icon="@android:drawable/ic_menu_search"
       app:iconGravity="textEnd"
       app:iconSize="40dp"
