edit menu and added fonts

--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -42,8 +42,9 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="27dp"
         android:layout_marginTop="32dp"
+        android:fontFamily="@font/gothambold"
         android:text="Title"
         android:textColor="#D1D1D1"
         android:textSize="21sp"
@@ -56,6 +57,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/gothambold"
         android:text="Artist"
         android:textColor="#D1D1D1"
         android:textSize="21sp"
@@ -68,6 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/gothambold"
         android:text="Album"
         android:textColor="#D1D1D1"
         android:textSize="21sp"
@@ -80,6 +83,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
+        android:fontFamily="@font/gothammedium"
         android:paddingBottom="25sp"
         android:text="TextView"
         android:textColor="#D1D1D1"
@@ -92,6 +96,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/gothambold"
         android:text="Genre"
         android:textColor="#D1D1D1"
         android:textSize="21sp"
@@ -104,6 +109,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
+        android:fontFamily="@font/gothammedium"
         android:text="TextView"
         android:textColor="#D1D1D1"
         android:textSize="18sp"
@@ -115,6 +121,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
+        android:fontFamily="@font/gothammedium"
         android:text="TextView"
         android:textColor="#D1D1D1"
         android:textSize="18sp"
@@ -126,6 +133,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        android:fontFamily="@font/gothambold"
         android:text="Year Produced"
         android:textColor="#D1D1D1"
         android:textSize="21sp"
@@ -138,6 +146,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
+        android:fontFamily="@font/gothammedium"
         android:text="TextView"
         android:textColor="#D1D1D1"
         android:textSize="18sp"
@@ -149,6 +158,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="6dp"
+        android:fontFamily="@font/gothammedium"
         android:text="TextView"
         android:textColor="#D1D1D1"
         android:textSize="18sp"
