--- a/app/src/main/res/layout/item_row.xml
+++ b/app/src/main/res/layout/item_row.xml
@@ -10,6 +10,9 @@
         android:id="@+id/tvRecyclerID"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="6dp"
+        android:layout_marginEnd="8dp"
+        android:fontFamily="@font/gothammedium"
         android:text="ID"
         android:textColor="#E8E8E8"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -17,14 +20,15 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.59" />
+        app:layout_constraintVertical_bias="0.594" />
 
     <TextView
         android:id="@+id/tvRecyclerSong"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="18dp"
+        android:layout_marginStart="11dp"
         android:layout_marginTop="24dp"
+        android:fontFamily="@font/gothambold"
         android:text="TextView"
         android:textColor="#E8E8E8"
         android:textSize="18sp"
@@ -37,6 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
+        android:fontFamily="@font/gothammedium"
         android:text="TextView"
         android:textColor="#9E9E9E"
         app:layout_constraintStart_toStartOf="@+id/tvRecyclerSong"
@@ -46,6 +51,7 @@
         android:id="@+id/tvRecyclerGenre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/gothammedium"
         android:text="TextView"
         android:textColor="#9E9E9E"
         app:layout_constraintStart_toEndOf="@+id/tvRecyclerArtist"
@@ -57,6 +63,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="52dp"
+        android:fontFamily="@font/gothambold"
         android:text="num"
         android:textColor="#E8E8E8"
         android:textStyle="bold"
@@ -65,9 +72,9 @@
 
     <ImageView
         android:id="@+id/ivAlbumArt"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
-        android:layout_marginStart="40dp"
+        android:layout_width="55dp"
+        android:layout_height="55dp"
+        android:layout_marginStart="30dp"
         android:layout_marginTop="20dp"
         android:cropToPadding="false"
         app:layout_constraintStart_toStartOf="parent"
