--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -11,6 +11,15 @@
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <!--Font-->
+        <item name = "android:fontFamily">@font/gothammedium</item>
         <!-- Customize your theme here. -->
+
+        <!-- Background Colour -->
+        <item name="android:itemBackground">#E6313335</item>
+        <!-- Text Colour -->
+        <item name="android:textColor">@color/white</item>
     </style>
+
+
 </resources>
