--- a/app/src/main/res/layout/activity_video.xml
+++ b/app/src/main/res/layout/activity_video.xml
@@ -14,8 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="250dp"
         android:layout_marginTop="20dp"
-        android:src=""
-        tools:srcCompat="@mipmap/ic_launcher" />
+        android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -35,7 +34,9 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
-            android:id="@+id/seek_bar"/>
+            android:id="@+id/seek_bar"
+            android:thumbTint="@color/purple_500"
+            android:progressTint="@color/purple_500"/>
 
         <TextView
             android:layout_width="wrap_content"
@@ -64,13 +65,14 @@
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/btn_play"
+            android:visibility="gone"
             android:src="@drawable/ic_play"/>
 
         <ImageView
             android:layout_width="60dp"
             android:layout_height="60dp"
             android:id="@+id/btn_pause"
-            android:visibility="gone"
+            android:visibility="visible"
             android:src="@drawable/ic_pause"/>
 
         <ImageView
