--- a/app/src/main/res/drawable/circlebutton.xml
+++ b/app/src/main/res/drawable/circlebutton.xml
@@ -1,14 +1,63 @@
-<?xml version="1.0" encoding="utf-8"?>
-<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
+<!--<?xml version="1.0" encoding="utf-8"?>-->
+<!--<shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">-->
 
-    <size
-        android:height="70dp"
-        android:width="70dp" />
+<!--    <size-->
+<!--        android:height="70dp"-->
+<!--        android:width="70dp" />-->
 
-    <solid
-        android:color="#000000"/>
+<!--    <solid-->
+<!--        android:color="#FF8837"/>-->
 
-    <corners
-        android:radius="35dp"/>
+<!--    <corners-->
+<!--        android:radius="35dp"/>-->
 
-</shape>
+<!--</shape>-->
+
+<layer-list xmlns:android="http://schemas.android.com/apk/res/android" >
+    <item>
+        <shape android:shape="rectangle">
+                <size
+                    android:height="70dp"
+                    android:width="70dp" />
+                <solid
+                    android:color="#FF8837"/>
+                <corners
+                    android:radius="35dp"/>
+        </shape>
+    </item>
+
+    <item
+        android:top="10dp"
+        android:left="10dp"
+        android:right="60dp"
+        android:bottom="10dp">
+        <rotate
+            android:fromDegrees="45"
+            android:toDegrees="45">
+            <shape android:shape="rectangle">
+                <solid android:color="#ffff00" />
+            </shape>
+        </rotate>
+    </item>
+
+    <item
+        android:top="55dp"
+        android:left="55dp"
+        android:bottom="0dp">
+        <shape android:shape="rectangle">
+            <size
+                android:height="20dp"
+                android:width="20dp" />
+            <solid android:color="#323232" />
+            <corners
+                android:radius="15dp"/>
+
+        </shape>
+    </item>
+
+    <include
+        layout = "@drawable/ic_fastforward"
+        />
+
+
+</layer-list>
