--- a/app/src/main/res/layout/activity_shuffle.xml
+++ b/app/src/main/res/layout/activity_shuffle.xml
@@ -8,7 +8,7 @@
     android:orientation="vertical"
     android:layout_gravity="center"
     android:background="@drawable/gradient_background"
-    tools:context=".VideoActivity">
+    tools:context=".AudioActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -35,7 +35,7 @@
         android:layout_marginLeft="12dp"
         android:fontFamily="@font/gothambold"
         android:text="Song"
-        android:textSize="30dp"
+        android:textSize="29dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
